test/sema/typeck/expr/call/function-infer-type-argument.out
error: type inference is not supported in this context.
--> function-infer-type-argument.dora:4:14
 | 
 | fn f() {
 |     identity[_](unknown);
                ~
 |     identity[(_, _)](unknownTuple);
 | }
error: unknown identifier `unknown`.
--> function-infer-type-argument.dora:4:17
 | 
 | fn f() {
 |     identity[_](unknown);
                   ~~~~~~~
 |     identity[(_, _)](unknownTuple);
 | }
error: type inference is not supported in this context.
--> function-infer-type-argument.dora:5:15
 | fn f() {
 |     identity[_](unknown);
 |     identity[(_, _)](unknownTuple);
                 ~
 | }
 | 
error: type inference is not supported in this context.
--> function-infer-type-argument.dora:5:18
 | fn f() {
 |     identity[_](unknown);
 |     identity[(_, _)](unknownTuple);
                    ~
 | }
 | 
error: unknown identifier `unknownTuple`.
--> function-infer-type-argument.dora:5:22
 | fn f() {
 |     identity[_](unknown);
 |     identity[(_, _)](unknownTuple);
                        ~~~~~~~~~~~~
 | }
 | 
5 errors found.
